// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults should render self with error 1`] = `
<Modal
  isOpen={true}
  stylesProp={null}
>
  <ErrorState
    color="black"
    message="Error requesting videos."
  />
</Modal>
`;

exports[`SearchResults should render self with loader 1`] = `
<Modal
  isOpen={true}
  stylesProp={null}
>
  <Loader />
</Modal>
`;

exports[`SearchResults should render self with no results 1`] = `
<Modal
  isOpen={true}
  stylesProp={null}
>
  <BlankState
    color="black"
    message="No videos found."
  />
</Modal>
`;

exports[`SearchResults should render self with results 1`] = `
<Modal
  isOpen={true}
  stylesProp={null}
>
  <InfiniteScroll
    isFetching={false}
    loadMore={[MockFunction]}
    maxHeight="350px"
    pageToken="token"
  >
    <ul
      className="searchResults"
    >
      <Video
        description=""
        handleClick={[Function]}
        isSearchResult={true}
        key="1"
        publishedAt="publishedAt"
        thumbnail="thumbnail.jpg"
        title="title"
        viewCount="1"
      />
      <Video
        description=""
        handleClick={[Function]}
        isSearchResult={true}
        key="2"
        publishedAt="publishedAt"
        thumbnail="thumbnail.jpg"
        title="title"
        viewCount="1"
      />
    </ul>
  </InfiniteScroll>
</Modal>
`;

exports[`SearchResults should render self with results 2`] = `
<Modal
  isOpen={true}
  stylesProp={null}
>
  <InfiniteScroll
    isFetching={true}
    loadMore={[MockFunction]}
    maxHeight="350px"
    pageToken="token"
  >
    <ul
      className="searchResults"
    >
      <Video
        description=""
        handleClick={[Function]}
        isSearchResult={true}
        key="1"
        publishedAt="publishedAt"
        thumbnail="thumbnail.jpg"
        title="title"
        viewCount="1"
      />
      <Video
        description=""
        handleClick={[Function]}
        isSearchResult={true}
        key="2"
        publishedAt="publishedAt"
        thumbnail="thumbnail.jpg"
        title="title"
        viewCount="1"
      />
    </ul>
  </InfiniteScroll>
</Modal>
`;
